--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
@@ -146,68 +151,68 @@
                         <!-- <svg></svg> -->
                     </button>
                 </a>
-                </div>
             </div>
-            <div class="site-main-announcements">
-                <h2>Announcements</h2>
-                <div class="site-main-announcements-content">
-                    <div class="site-main-announcements-item">
-                        <a href="#">
-                            <h3>Site Maintenance</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque
-                                cupiditate
-                                dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
-                                voluptates, ea vero odio minima.</p>
-                        </a>
-                    </div>
-                    <div class="site-main-announcements-item">
-                        <a href="#">
-                            <h3>Community Share Day</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia
-                                nostrum
-                                quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam
-                                non
-                                nobis
-                                eaque fugiat ducimus atque quidem.</p>
-                        </a>
-                    </div>
-                    <div class="site-main-announcements-item">
-                        <a href="#">
-                            <h3>Updated Privacy Policy</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo
-                                aperiam,
-                                alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem
-                                obcaecati!
-                                Doloribus culpa enim cum iusto?</p>
-                        </a>
-                    </div>
+        </div>
+        <div class="site-main-announcements">
+            <h2>Announcements</h2>
+            <div class="site-main-announcements-content">
+                <div class="site-main-announcements-item">
+                    <a href="#">
+                        <h3>Site Maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque
+                            cupiditate
+                            dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
+                            voluptates, ea vero odio minima.</p>
+                    </a>
                 </div>
-            </div>
-            <div class="site-main-trending">
-                <h2>Trending</h2>
-                <div class="site-main-trending-content">
-                    <a href="#" class="site-main-trending-item">
-                        <img src="" alt="">
-                        <p class="site-main-trending-handle">@tegan</p>
-                        <p class="site-main-trending-about">World Peace Builder</p>
+                <div class="site-main-announcements-item">
+                    <a href="#">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia
+                            nostrum
+                            quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam
+                            non
+                            nobis
+                            eaque fugiat ducimus atque quidem.</p>
                     </a>
-                    <a href="#" class="site-main-trending-item">
-                        <img src="" alt="">
-                        <p class="site-main-trending-handle">@Morgan</p>
-                        <p class="site-main-trending-about">Super Cool Project</p>
-                    </a>
-                    <a href="#" class="site-main-trending-item">
-                        <img src="" alt="">
-                        <p class="site-main-trending-handle">@kendall</p>
-                        <p class="site-main-trending-about">Life Changing App</p>
-                    </a>
-                    <a href="#" class="site-main-trending-item">
-                        <img src="" alt="">
-                        <p class="site-main-trending-handle">@alex</p>
-                        <p class="site-main-trending-about">No Traffic Maker</p>
+                </div>
+                <div class="site-main-announcements-item">
+                    <a href="#">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo
+                            aperiam,
+                            alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem
+                            obcaecati!
+                            Doloribus culpa enim cum iusto?</p>
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="site-main-trending">
+            <h2>Trending</h2>
+            <div class="site-main-trending-content">
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@tegan</p>
+                    <p class="site-main-trending-about">World Peace Builder</p>
+                </a>
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@Morgan</p>
+                    <p class="site-main-trending-about">Super Cool Project</p>
+                </a>
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@kendall</p>
+                    <p class="site-main-trending-about">Life Changing App</p>
+                </a>
+                <a href="#" class="site-main-trending-item">
+                    <img src="" alt="">
+                    <p class="site-main-trending-handle">@alex</p>
+                    <p class="site-main-trending-about">No Traffic Maker</p>
+                </a>
+            </div>
+        </div>
     </section>
     <section class="site-sidebar">
         <div class="site-sidebar-header">
