--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     </header>
     <section class="site-main">
         <div class="site-main-projects">
-            <h2>Your Projects</h2>
+            <h3>Your Projects</h3>
             <div class="site-main-projects-content">
                 <a class="site-main-projects-item" href="#">
                     <div>
-                        <h3>Super Cool Project</h3>
+                        <h4>Super Cool Project</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium blanditiis quia
                             recusandae
                             ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore
@@ -94,7 +94,7 @@
                 </a>
                 <a class="site-main-projects-item" href="#">
                     <div>
-                        <h3>Less Cool Project</h3>
+                        <h4>Less Cool Project</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quos perferendis placeat
                             hic
                             libero nihil ratione, architecto, qui, necessitatibus tempora suscipit! Esse, modi tempore
@@ -130,7 +130,7 @@
                 </a>
                 <a class="site-main-projects-item" href="#">
                     <div>
-                        <h3>Impossible App</h3>
+                        <h4>Impossible App</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod architecto officia repudiandae
                             corporis, aperiam quis suscipit? Dignissimos ex fuga reiciendis culpa amet, veniam
                             doloremque,
@@ -165,7 +165,7 @@
                 </a>
                 <a class="site-main-projects-item" href="#">
                     <div>
-                        <h3>Easy Peasy App</h3>
+                        <h4>Easy Peasy App</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum maiores cupiditate,
                             dolorem
                             necessitatibus, aperiam laboriosam distinctio tempore pariatur obcaecati voluptatem
@@ -202,7 +202,7 @@
                 </a>
                 <a class="site-main-projects-item" href="#">
                     <div>
-                        <h3>Ad Blocker</h3>
+                        <h4>Ad Blocker</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate sunt voluptatibus
                             corporis
                             veritatis eum vel magnam perferendis, non dolore aspernatur mollitia quo ratione enim
@@ -238,7 +238,7 @@
                 </a>
                 <a class="site-main-projects-item" href="#">
                     <div>
-                        <h3>Money Maker</h3>
+                        <h4>Money Maker</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt modi ratione error, sit odio
                             dignissimos unde eum tempore dolorem rerum sequi numquam voluptatem facere eligendi nihil
                             accusamus
@@ -274,11 +274,11 @@
             </div>
         </div>
         <div class="site-main-announcements">
-            <h2>Announcements</h2>
+            <h3>Announcements</h3>
             <div class="site-main-announcements-content">
                 <div class="site-main-announcements-item">
                     <a href="#">
-                        <h3>Site Maintenance</h3>
+                        <h4>Site Maintenance</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque
                             cupiditate
                             dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores officia
@@ -287,7 +287,7 @@
                 </div>
                 <div class="site-main-announcements-item">
                     <a href="#">
-                        <h3>Community Share Day</h3>
+                        <h4>Community Share Day</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima quia
                             nostrum
                             quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates nam
@@ -298,7 +298,7 @@
                 </div>
                 <div class="site-main-announcements-item">
                     <a href="#">
-                        <h3>Updated Privacy Policy</h3>
+                        <h4>Updated Privacy Policy</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci quo
                             aperiam,
                             alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem
@@ -309,7 +309,7 @@
             </div>
         </div>
         <div class="site-main-trending">
-            <h2>Trending</h2>
+            <h3>Trending</h3>
             <div class="site-main-trending-content">
                 <a href="#" class="site-main-trending-item">
                     <img src="" alt="">
@@ -335,47 +335,72 @@
         </div>
     </section>
     <section class="site-sidebar">
-        <div class="site-sidebar-header">
-            <hgroup>
-                <!-- <svg></svg> -->
-                <h2>Dashboard</h2>
-            </hgroup>
-        </div>
+        <hgroup class="site-sidebar-header">
+            <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="40" width="40">
+                <path
+                    d="M315.4 15.5C309.7 5.9 299.2 0 288 0s-21.7 5.9-27.4 15.5l-96 160c-5.9 9.9-6.1 22.2-.4 32.2s16.3 16.2 27.8 16.2H384c11.5 0 22.2-6.2 27.8-16.2s5.5-22.3-.4-32.2l-96-160zM288 312V456c0 22.1 17.9 40 40 40H472c22.1 0 40-17.9 40-40V312c0-22.1-17.9-40-40-40H328c-22.1 0-40 17.9-40 40zM128 512a128 128 0 1 0 0-256 128 128 0 1 0 0 256z" />
+            </svg>
+            <h2>Dashboard</h2>
+        </hgroup>
         <div class="site-sidebar-nav">
             <ul class="site-sidebar-nav-list">
                 <li class="site-sidebar-nav-list-item">
                     <a href="#" class="site-sidebar-nav-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" height="20"
+                            width="20">
+                            <path
+                                d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
+                        </svg>
                         Home
                     </a>
                 </li>
                 <li class="site-sidebar-nav-list-item">
                     <a href="#" class="site-sidebar-nav-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" height="20"
+                            width="20">
+                            <path
+                                d="M528 160V416c0 8.8-7.2 16-16 16H320c0-44.2-35.8-80-80-80H176c-44.2 0-80 35.8-80 80H64c-8.8 0-16-7.2-16-16V160H528zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM272 256a64 64 0 1 0 -128 0 64 64 0 1 0 128 0zm104-48c-13.3 0-24 10.7-24 24s10.7 24 24 24h80c13.3 0 24-10.7 24-24s-10.7-24-24-24H376zm0 96c-13.3 0-24 10.7-24 24s10.7 24 24 24h80c13.3 0 24-10.7 24-24s-10.7-24-24-24H376z" />
+                        </svg>
                         Profile
                     </a>
                 </li>
                 <li class="site-sidebar-nav-list-item">
                     <a href="#" class="site-sidebar-nav-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="20"
+                            width="20">
+                            <path
+                                d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64h96v80c0 6.1 3.4 11.6 8.8 14.3s11.9 2.1 16.8-1.5L309.3 416H448c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64z" />
+                        </svg>
                         Messages
                     </a>
                 </li>
                 <li>
                     <a href="#" class="site-sidebar-nav-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="20"
+                            width="20">
+                            <path
+                                d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z" />
+                        </svg>
                         History
                     </a>
                 </li>
                 <li class="site-sidebar-nav-list-item">
                     <a href="#" class="site-sidebar-nav-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="20"
+                            width="20">
+                            <path
+                                d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H288V368c0-26.5 21.5-48 48-48H448V96c0-35.3-28.7-64-64-64H64zM448 352H402.7 336c-8.8 0-16 7.2-16 16v66.7V480l32-32 64-64 32-32z" />
+                        </svg>
                         Tasks
                     </a>
                 </li>
                 <li class="site-sidebar-nav-list-item">
                     <a href="#" class="site-sidebar-nav-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" height="20"
+                            width="20">
+                            <path
+                                d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192h42.7c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0H21.3C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7h42.7C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3H405.3zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352H378.7C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7H154.7c-14.7 0-26.7-11.9-26.7-26.7z" />
+                        </svg>
                         Communities
                     </a>
                 </li>
@@ -385,19 +410,31 @@
             <ul class="site-sidebar-options-list">
                 <li class="site-sidebar-options-item">
                     <a href="#" class="site-sidebar-options-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="20"
+                            width="20">
+                            <path
+                                d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
+                        </svg>
                         Settings
                     </a>
                 </li>
                 <li class="site-sidebar-options-item">
                     <a href="#" class="site-sidebar-options-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="20"
+                            width="20">
+                            <path
+                                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3h58.3c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24V250.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1H222.6c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z" />
+                        </svg>
                         Support
                     </a>
                 </li>
                 <li class="site-sidebar-options-item">
                     <a href="#" class="site-sidebar-options-list-item-a">
-                        <!-- <svg></svg> -->
+                        <svg class="sidebar-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="20"
+                            width="20">
+                            <path
+                                d="M256 0c4.6 0 9.2 1 13.4 2.9L457.7 82.8c22 9.3 38.4 31 38.3 57.2c-.5 99.2-41.3 280.7-213.6 363.2c-16.7 8-36.1 8-52.8 0C57.3 420.7 16.5 239.2 16 140c-.1-26.2 16.3-47.9 38.3-57.2L242.7 2.9C246.8 1 251.4 0 256 0z" />
+                        </svg>
                         Privacy
                     </a>
                 </li>
