--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <hgroup class="site-header-user">
             <h1>Morgan Oakley (@morgan)</h1>
             <p>Hi there,</p>
-            <img>
+            <img src="">
         </hgroup>
         <ul class="site-header-options-list">
             <li class="site-header-options-list-item">
@@ -44,11 +44,14 @@
         </div>
         <div class="site-header-nav">
             <a class="site-header-nav-bell" href="#">
-                <i></i>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="20" width="20">
+                    <path
+                        d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416H424c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112v25.4c0 47.9 13.9 94.6 39.7 134.6H72.3C98.1 328 112 281.3 112 233.4V208c0-61.9 50.1-112 112-112zm64 352H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z" />
+                </svg>
             </a>
             <a class="site-header-nav-user">
-                <img>
-                <p>Morgan Oakley</p>
+                <img src="https://lambrous.github.io/odin-admin-dashboard/images/avatar00003.svg">
+                <p class="site-header-user-handle">Morgan Oakley</p>
             </a>
         </div>
     </header>
@@ -63,8 +66,8 @@
                             recusandae
                             ad vel, saepe fuga cumque quo ipsum esse deserunt ratione impedit atque eius alias labore
                             eligendi
+                            qui!</p>
                     </div>
-                    qui!</p>
                     <ul class="site-main-projects-item-button-list">
                         <li class="site-main-projects-item-button-list-item">
                             <button class="site-main-projects-item-button">
@@ -312,31 +315,42 @@
             <h3>Trending</h3>
             <div class="site-main-trending-content">
                 <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@tegan</p>
-                    <p class="site-main-trending-about">World Peace Builder</p>
+                    <img src="https://lambrous.github.io/odin-admin-dashboard/images/avatar00004.svg" alt="">
+                    <div>
+                        <p class="site-main-trending-handle">@tegan</p>
+                        <p class="site-main-trending-about">World Peace Builder</p>
+                    </div>
                 </a>
                 <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@Morgan</p>
-                    <p class="site-main-trending-about">Super Cool Project</p>
+                    <img src="https://lambrous.github.io/odin-admin-dashboard/images/avatar00003.svg" alt="">
+                    <div>
+                        <p class="site-main-trending-handle">@Morgan</p>
+                        <p class="site-main-trending-about">Super Cool Project</p>
+                    </div>
                 </a>
                 <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@kendall</p>
-                    <p class="site-main-trending-about">Life Changing App</p>
+                    <img src="https://lambrous.github.io/odin-admin-dashboard/images/avatar00002.svg" alt="">
+                    <div>
+                        <p class="site-main-trending-handle">@kendall</p>
+                        <p class="site-main-trending-about">Life Changing App</p>
+                    </div>
                 </a>
                 <a href="#" class="site-main-trending-item">
-                    <img src="" alt="">
-                    <p class="site-main-trending-handle">@alex</p>
-                    <p class="site-main-trending-about">No Traffic Maker</p>
-                </a>
+                    <img src="https://lambrous.github.io/odin-admin-dashboard/images/avatar00001.svg"alt="">
+                    <div>
+                        <p class="site-main-trending-handle">@alex</p>
+                        <p class="site-main-trending-about">No Traffic Maker</p>
+                    </div>
             </div>
+        </div>
+        </a>
+        </div>
         </div>
     </section>
     <section class="site-sidebar">
         <hgroup class="site-sidebar-header">
-            <svg class="sidebar-header-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="40" width="40">
+            <svg class="sidebar-header-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="40"
+                width="40">
                 <path
                     d="M315.4 15.5C309.7 5.9 299.2 0 288 0s-21.7 5.9-27.4 15.5l-96 160c-5.9 9.9-6.1 22.2-.4 32.2s16.3 16.2 27.8 16.2H384c11.5 0 22.2-6.2 27.8-16.2s5.5-22.3-.4-32.2l-96-160zM288 312V456c0 22.1 17.9 40 40 40H472c22.1 0 40-17.9 40-40V312c0-22.1-17.9-40-40-40H328c-22.1 0-40 17.9-40 40zM128 512a128 128 0 1 0 0-256 128 128 0 1 0 0 256z" />
             </svg>
