--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="site-header-search">
                     <form class="site-header-search-form">
                         <button class="site-header-search-button" type="submit">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="16" width="16">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="20" width="20">
                                 <path
                                     d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
                             </svg>
@@ -315,8 +315,8 @@
                     <div class="site-main-announcements-content">
                         <div class="site-main-announcements-item">
                             <a href="#">
-                                <h4>Site Maintenance</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque
+                                <h4 class="site-main-announcements-large-text">Site Maintenance</h4>
+                                <p class="site-main-announcements-small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quos neque
                                     cupiditate
                                     dolore id esse sed voluptatum doloribus labore illo exercitationem eaque maiores
                                     officia
@@ -325,8 +325,8 @@
                         </div>
                         <div class="site-main-announcements-item">
                             <a href="#">
-                                <h4>Community Share Day</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima
+                                <h4 class="site-main-announcements-large-text">Community Share Day</h4>
+                                <p class="site-main-announcements-small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur minima
                                     quia
                                     nostrum
                                     quaerat sapiente velit voluptatum reprehenderit sequi incidunt. Officia voluptates
@@ -338,8 +338,8 @@
                         </div>
                         <div class="site-main-announcements-item">
                             <a href="#">
-                                <h4>Updated Privacy Policy</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci
+                                <h4 class="site-main-announcements-large-text">Updated Privacy Policy</h4>
+                                <p class="site-main-announcements-small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab quas adipisci
                                     quo
                                     aperiam,
                                     alias, earum nesciunt enim nam error dignissimos maiores minima, exercitationem
